[MD settings] display message about secondary install in default browser settings

This CL reworks the 'default browser' messages displayed in different
situations. The error icon has been removed to match the specs. A browser proxy
and unit tests have been added.

BUG=623328
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2317693003
Cr-Commit-Position: refs/heads/master@{#417327}

Former-commit-id: b18a04f5f5a16481ccb6693b2f8450dc1abb3735